# ChangeLog for net-misc/gnome-online-miners
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/gnome-online-miners/ChangeLog,v 1.17 2015/04/19 15:48:01 eva Exp $

*gnome-online-miners-3.14.2 (19 Apr 2015)

  19 Apr 2015; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-online-miners-3.14.2.ebuild, metadata.xml:
  Version bump.

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.14.1.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.14.1.ebuild:
  amd64 stable, bug 534012

  07 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-online-miners-3.12.0.ebuild, gnome-online-miners-3.14.1.ebuild:
  Require libgdata[gnome] (bug #541942, thanks to Toralf Förster).

*gnome-online-miners-3.14.1 (23 Dec 2014)

  23 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-online-miners-3.10.3.ebuild, +gnome-online-miners-3.14.1.ebuild:
  Version bump for Gnome 3.14. Clean up old revisions.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gnome-online-miners-3.12.0.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gnome-online-miners-3.12.0.ebuild:
  Stable for amd64, wrt bug #512912

*gnome-online-miners-3.12.0 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-online-miners-3.12.0.ebuild:
  Version bump for Gnome 3.12.

  30 Mar 2014; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.10.3.ebuild:
  Fix RDEPEND on newer goa (#505888 by renato gallo)

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.10.3.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.10.3.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.10.3.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gnome-online-miners-3.10.3.ebuild: