@@ -7,12 +7,12 @@ DIST gnome-online-miners-3.14.2.tar.xz 258356 SHA256 b40b3181187828a0a53732d2916
 EBUILD gnome-online-miners-3.12.0.ebuild 833 SHA256 4f950156bb09bcf1ca0040568fb2627cbdeb0d0f3c9e37e5e49af78e77d3d875 SHA512 1b6d90274c34efba6da5dec1fadd2cbf9947a5eec1a6d752c614ed8ac69a4dc22162829b98d951c081b5b6540fedef6e9c15a16f2b1a3840cc5942de171dd47c WHIRLPOOL f962643f3a1f5b5dfd00263164775325301f6a35367d2e198ec30a5361356f2a8f215694af6dc9ff7a2954884c69799ee10a9592eaf4136e94ee03e459874ee8
 EBUILD gnome-online-miners-3.14.1.ebuild 830 SHA256 84a6f7dcaa3f0f7f6d906775e57b42302b128ad71bf25699fb6191dbd3193aa8 SHA512 3eb9d69fb6b19b554d8c688bddbef18e578ca713d7405ead353a361fc202bb928996f4fbaeae949874a155d69a5b6ad1e038918ec142d5ba9f9c5f333ca639b8 WHIRLPOOL c87bfd1d2853f123de5e448a0e970e56c176f7893b35a40413b7c93b04903861385b7d3b7642c18b2cf36d466fe09aa005c65b070536b943b919b1a5339a44de
 EBUILD gnome-online-miners-3.14.2.ebuild 970 SHA256 ebfb88a2a3c00c0016fef92f42d0527a773579ab0777988652ddbf571cfc976d SHA512 2579e2966a06fe95b0d9e3adf67aadd89486635aa24352a76c75b8643d9f9a1bb44067d3bf10989951fa789a1ee264ae46f8a9a8c81977d04a94fb7f192da191 WHIRLPOOL e4658caeba572e7b45bc68d66fc3d4df0fe59d0e29e79972ff2a1d89a57eb9e62f48df0408596d8e5a5a42ad07581410b2e59ce42813518cf7eb6fb79dd6fa98
-MISC ChangeLog 2591 SHA256 b84654c104393037c3d4a7768bbcd0a585a97384071feacf085015fdb6135728 SHA512 f13702b1a693eb2798cd66df499897d0e83c1356461206d463e5c50a8ccb00605c32e9495e6871124506c68a365daa8581b6da86988bf0de7b2db044ae897ce2 WHIRLPOOL f1580037e72b363ac95560c91dab59a07445a8dc6042218f2abde3a9f567409ac76e3e28f984e5570265ead53bae6a929d5b13c0900aae6c2c6161ec72f5b742
-MISC metadata.xml 413 SHA256 7738907921cdf0932485a66197b15e76f5f06687b9b405390e26983601903fcc SHA512 d49214188747a4158380e23fef3141ae95ff3b5dd3eb77bb0d5d8d423b49c928f502ba513d38b9e2a55a12f0f3144bed1dd50bbfe5509bdbc31553d0d4886fd1 WHIRLPOOL 64a5ca506a62f63ea52ca59ab49e3927b1e2729c7d6b454026068343703d3855747cd1aa296e013767919577f5eaff30e192e37fbf6dd759d7827d9d9f37bdbe
+MISC ChangeLog 2714 SHA256 eff30462c9d68ca1bc7462d20c8bfa5684c63f0344673bcb24b079ad8549a8cf SHA512 9620d5148b7f3c429f7b04865ff5581a9a189cee5e891571b69712a49c2c14319b841b4e6769f13a71b457978f2f6de3ebfd26e9ab89870e2484a7b2bb1cb3f8 WHIRLPOOL 395de48a98d59a8c6357dcc084cc50345b23ca0054b1f159497c4d36ee3523a13f4e9b33143a7a7048c8c83ee6aa65cdc8805e0b8533284ee58d7a6c78086f9f
+MISC metadata.xml 159 SHA256 b1ccd57b80d8d6ee7a9924844efd69830edfb744ab818d67e50a008b5aae7d4b SHA512 9408846d0f3194f62043b64e325aed9e8cce9a74b556865acf71facc3ad59a092dccbbb3c608ada40b73625eaac93a7bcc976858c6a47426bb8fadb6f830fe2b WHIRLPOOL 4700c8b71899b5acffcc46580315d4d116b478cfa283e0ea0569ab180e46850ce85d73c7370d989e53dd8aecb69ed843d2716bfebd3c5d74a7b5c3d4b94b96bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUzzjIACgkQ1fmVwcYIWAYkTQCfY6imYowBgKkUcPhC5U1Hy8e4
-2XgAn05FeA2gqq54vjHx2UXW1GafYb5J
-=OQ8l
+iEYEAREIAAYFAlUzzswACgkQ1fmVwcYIWAbqRwCg0KCxHTgUyyVi7oiaMmJHcBUQ
+xR4An1vmmsbfmdfr14YLWQ+n9eUzz+xh
+=iKvu
 -----END PGP SIGNATURE-----
